# page-models

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
page_models/: __init__.py  core.py  url.py  validators.py
page_models/an_url/: an_url.py
page_models/query/: metadata.py  query.py
page_models/sku/: attribute.py  audio.py  base_sku.py  image.py  measurement.py  metadata.py  price.py  rating.py  sku.py  snapshot.py  video.py
page_product/: __init__.py  attribute.py  measurement.py  metadata.py  price.py  product.py  sku.py  utility.py
page_sku/: __init__.py  measurement.py  metadata.py  price.py  rating.py  sku.py
tests/: test_convert_to_json.py  test_create_sku.py  test_date.py  test_id.py  test_product.py  test_sku.py  test_sku_date.py  test_sku_init.py  test_sku_metadata.py  test_snapshot.py  test_val_str.py
