[project]
name = "page-models"
version = "0.1.0"
authors = [
    {name = "thiagola92", email = "thiagola92@gmail.com"},
]
dependencies = [
    "pydantic>=1.9.1",
    "gtin>=1.3.1649173518",
    "motor>=3.0.0"]
requires-python = ">=3.10"
readme = "README.md"

[project.urls]
repository = "https://github.com/la-catalog/page-models"

[tool.pdm]

[tool.pdm.scripts]
tests = "python -m unittest discover -v -f -s tests"
sort = "python -m isort -v --ac ."

[tool.pdm.dev-dependencies]
lint = [
    "black",
    "isort"
]

# [[tool.pdm.source]]
# url = "https://private-site.org/pypi/simple"
# verify_ssl = false
# name = "lacatalog"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
